# Qt-Github-App

./: .gitignore  README.md
GithubAppIdea/: CMakeLists.txt  assets.qrc  githubrequesthandler.cpp  githubrequesthandler.h  main.cpp  main.qml
